update(esp32-freertos): compartmentalize code
Use Task Notifications to enable sensor after
Initialization. Everything is done async.

--- a/wiring/esp32-freertos/platformio.ini
+++ b/wiring/esp32-freertos/platformio.ini
@@ -12,3 +12,5 @@ lib_deps =  ; util/data-formatting libraries
 	   knolleary/PubSubClient
 	   ; Sensors libraries
 	   d03n3rfr1tz3/HC-SR04
+platform_packages = espressif/toolchain-xtensa-esp32
+build_flags = -DCORE_DEBUG_LEVEL=5
