--- a/rust/rust-iot-app/Cargo.toml
+++ b/rust/rust-iot-app/Cargo.toml
@@ -61,6 +61,7 @@ embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
 embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
 esp-hal-embassy = { version = "0.6.0", features = ["esp32c6"] }
 static_cell = { version = "2.1.0", features = ["nightly"] }
+esp-hal-dhcp-server = "0.2.4"
 
 [profile.dev]
 # Rust debug is too slow.
